=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 v1.102 - In Development

=over

=item *

Changed HTML in templates to use C<text> rather than C<textfield> in form 
inputs. [Perrin]

=item *

Updated several modules: DBI to 1.47, WWW-Mechanize to 1.10,
URI to 1.35, and libwww-perl to 5.803. [Perrin]

=item *

Added C<bin/krang_addon_framework> - a new script to create a
supporting framework to simplify development of Krang addons. [Peter]

=item *

Added C<--rebuild> option to C<bin/krang_build> allowing it to build modules
even if there an existing Krang build there already. [Perrin]

=back

=head2 v1.101 - January 20, 2005

=over

=item *

Added C<--not_on_desk> option to C<bin/krang_publish> - limiting
publishing to checked-in items that are not on any desk. [Michael Peters]

=item *

Fixed a bug in L<Krang::Schedule> - cleanup of the C<tmp/> directory
was not being done properly.  This is now fixed. [Peter]

=item *

Cleaned up how C<KRANG_PERSIST> variables are stored in the session
cache for remembering search preferences.  The cleanup also fixed a
number of bugs - the C<Clear> buttons on the advanced-search pages now
work again, category searches are now done on a per-type basis
(e.g. separate Story/Media/Template category-search prefs), and search
terms are remembered properly. [Peter]

=item *

Fixed a bug in L<Krang::CGI::ElementEditor> - the new "save always
reorders" functionality that is part of 1.100 was breaking bulk-edit,
where reordering never happens.  This now works properly.  [Peter]


=item *

Added error-handling for Stories that return a zero-length string when
previewed/published.  [Peter]


=item *

Upgraded L<Imager> to 0.44 from 0.43, which fixes a bug involving
thumbnailing of extreme-aspect-ratio images. [Peter]

=item *

Fixed error message trapping in C<bin/krang_install> to get Krang to
play nicer with MySQL 4.1.x [Peter]

=item *
